--- a/index.html
+++ b/index.html
@@ -1,10 +1,240 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to My Landing Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Teaching Tools</title>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Poppins", Arial, sans-serif;
+      line-height: 1.6;
+      background: #f9fafb;
+      color: #333;
+    }
+
+    nav {
+      background: linear-gradient(135deg, #4db6ac, #81c784);
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 40px;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    nav h1 {
+      font-size: 1.5rem;
+      letter-spacing: 1px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 25px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: opacity 0.3s;
+    }
+
+    nav ul li a:hover {
+      opacity: 0.8;
+    }
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background: linear-gradient(135deg, #81c784, #4db6ac);
+      color: white;
+      padding: 100px 20px;
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 15px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin-bottom: 30px;
+    }
+
+    .hero .btn {
+      background: white;
+      color: #388e3c;
+      padding: 12px 30px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: all 0.3s;
+    }
+
+    .hero .btn:hover {
+      background: #2e7d32;
+      color: white;
+    }
+
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 60px 20px;
+      gap: 30px;
+      background: white;
+    }
+
+    .feature-card {
+      background: #f4fdf9;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      width: 280px;
+      text-align: center;
+      transition: transform 0.3s ease;
+    }
+
+    .feature-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .feature-card h3 {
+      color: #2e7d32;
+      margin-bottom: 10px;
+    }
+
+    .feature-card p {
+      color: #555;
+      font-size: 0.95rem;
+    }
+
+    .subscribe {
+      text-align: center;
+      background: linear-gradient(135deg, #4db6ac, #81c784);
+      color: white;
+      padding: 70px 20px;
+    }
+
+    .subscribe h3 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+    }
+
+    .subscribe p {
+      font-size: 1rem;
+      margin-bottom: 25px;
+    }
+
+    .subscribe input[type="email"] {
+      padding: 12px 15px;
+      border-radius: 25px;
+      border: none;
+      outline: none;
+      width: 250px;
+      max-width: 80%;
+      margin-right: 10px;
+      font-size: 1rem;
+    }
+
+    .subscribe button {
+      background-color: white;
+      color: #388e3c;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 25px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .subscribe button:hover {
+      background-color: #2e7d32;
+      color: white;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #2e7d32;
+      color: white;
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 768px) {
+      .hero h2 {
+        font-size: 2rem;
+      }
+
+      .features {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav {
+        flex-direction: column;
+        gap: 10px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <h1>Hello, this is my landing page!</h1>
-    <p>More content coming soon.</p>
+  <nav>
+    <h1>Teaching Tools</h1>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#features">Features</a></li>
+      <li><a href="#subscribe">Subscribe</a></li>
+    </ul>
+  </nav>
+
+  <section class="hero">
+    <h2>Empowering Teachers Everywhere</h2>
+    <p>Create smart comments, generate reports, and design tests effortlessly — all in one place.</p>
+    <a href="#" class="btn">Try the Comment Generator</a>
+  </section>
+
+  <section id="features" class="features">
+    <div class="feature-card">
+      <h3>Smart Comments</h3>
+      <p>Instantly generate personalized student comments that save hours of grading time.</p>
+    </div>
+
+    <div class="feature-card">
+      <h3>Custom Tests</h3>
+      <p>Create phonics and grammar tests tailored to each student's learning level.</p>
+    </div>
+
+    <div class="feature-card">
+      <h3>Reports & Feedback</h3>
+      <p>Generate detailed reports and meaningful feedback for parents and students.</p>
+    </div>
+  </section>
+
+  <section id="subscribe" class="subscribe">
+    <h3>Stay Updated</h3>
+    <p>Join our mailing list to get early access and updates on new tools.</p>
+    <form action="#" method="post">
+      <input type="email" name="email" placeholder="Enter your email" required />
+      <button type="submit">Subscribe</button>
+    </form>
+  </section>
+
+  <footer>
+    © 2025 Teaching Tools — Empowering Educators
+  </footer>
 </body>
 </html>
