--- a/index.html
+++ b/index.html
@@ -51,16 +51,14 @@
       opacity: 0.8;
     }
 
-    .hero {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      background: linear-gradient(135deg, #81c784, #4db6ac);
-      color: white;
-      padding: 100px 20px;
-    }
+   .hero {
+  background: url('https://images.unsplash.com/photo-1600195077075-7c397b2f5aaf?auto=format&fit=crop&w=1600&q=80')
+    center/cover no-repeat;
+  color: white;
+  padding: 120px 20px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+}
+
 
     .hero h2 {
       font-size: 2.5rem;
