--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
     body {
       font-family: "Poppins", Arial, sans-serif;
-      line-height: 1.6;
       background: #f9fafb;
       color: #333;
+      line-height: 1.6;
+      overflow-x: hidden;
     }
 
     nav {
@@ -30,11 +31,11 @@
     }
 
     nav h1 {
-      font-size: 1.5rem;
-      letter-spacing: 1px;
       display: flex;
       align-items: center;
       gap: 10px;
+      font-size: 1.5rem;
+      letter-spacing: 1px;
     }
 
     nav h1 img {
@@ -61,27 +62,23 @@
     }
 
     .hero {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      background: url('https://images.unsplash.com/photo-1600195077075-7c397b2f5aaf?auto=format&fit=crop&w=1600&q=80')
-        center/cover no-repeat;
+      background: url('https://cdn.pixabay.com/photo/2016/03/09/09/22/school-1247942_1280.jpg') center/cover no-repeat;
       color: white;
+      text-align: center;
       padding: 120px 20px;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+      animation: fadeIn 2s ease-in-out;
     }
 
     .hero h2 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 15px;
     }
 
     .hero p {
       font-size: 1.2rem;
-      max-width: 600px;
-      margin-bottom: 30px;
+      max-width: 650px;
+      margin: 0 auto 30px auto;
     }
 
     .hero .btn {
@@ -116,6 +113,7 @@
       width: 280px;
       text-align: center;
       transition: transform 0.3s ease;
+      animation: fadeInUp 1s ease forwards;
     }
 
     .feature-card:hover {
@@ -133,11 +131,6 @@
       margin-bottom: 10px;
     }
 
-    .feature-card p {
-      color: #555;
-      font-size: 0.95rem;
-    }
-
     .subscribe {
       text-align: center;
       background: linear-gradient(135deg, #4db6ac, #81c784);
@@ -150,18 +143,12 @@
       margin-bottom: 20px;
     }
 
-    .subscribe p {
-      font-size: 1rem;
-      margin-bottom: 25px;
-    }
-
     .subscribe input[type="email"] {
       padding: 12px 15px;
       border-radius: 25px;
       border: none;
       outline: none;
       width: 250px;
-      max-width: 80%;
       margin-right: 10px;
       font-size: 1rem;
     }
@@ -190,16 +177,24 @@
       font-size: 0.9rem;
     }
 
-    @media (max-width: 768px) {
-      .hero h2 {
-        font-size: 2rem;
-      }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
 
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 768px) {
       .features {
         flex-direction: column;
         align-items: center;
       }
-
+      .hero h2 {
+        font-size: 2rem;
+      }
       nav {
         flex-direction: column;
         gap: 10px;
