--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       margin-bottom: 10px;
     }
 
-    /* New download section */
+    /* Download section */
     #download {
       background: #ffffff;
       text-align: center;
@@ -286,16 +286,18 @@
     </div>
   </section>
 
-  <!-- New Download Section -->
+  <!-- ✅ Download Section -->
   <section id="download">
     <h2>Download the ESL Comment Generator</h2>
     <p>
       Get the latest <strong>ESL Comment Generator Pro</strong> for Windows.  
       No installation needed — just download and open the file.
     </p>
-    <a href="https://github.com/ScottJeffery/esl-comment-generator/raw/main/ESL_Comment_Generator_Pro.exe" download>
+
+    <a href="https://github.com/ScooterA/My-landing-page/raw/main/ESL_Comment_Generator_Pro.exe" download>
       <button>⬇️ Download for Windows</button>
     </a>
+
     <small>
       ⚠️ Windows only. If you see a SmartScreen warning, click <em>“More Info → Run Anyway”</em>.
     </small>
