--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
   </section>
 
-  <!-- ✅ Download Section -->
+  <!-- ✅ Fixed Download Section -->
   <section id="download">
     <h2>Download the ESL Comment Generator</h2>
     <p>
@@ -294,7 +294,7 @@
       No installation needed — just download and open the file.
     </p>
 
-    <a href="https://github.com/ScooterA/My-landing-page/raw/main/ESL_Comment_Generator_Pro.exe" download>
+    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Pro.exe" download>
       <button>⬇️ Download for Windows</button>
     </a>
 
