--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
       font-size: 1.1rem;
       cursor: pointer;
       transition: background 0.3s;
+      margin: 10px;
     }
 
     #download button:hover {
@@ -288,14 +289,15 @@
 
   <!-- ✅ Fixed Download Section -->
   <section id="download">
-    <h2>Download the ESL Comment Generator</h2>
-    <p>
-      Get the latest <strong>ESL Comment Generator Pro</strong> for Windows.  
-      No installation needed — just download and open the file.
-    </p>
+    <h2>Download ESL Comment Generators</h2>
+    <p>Choose the version that fits your needs best.</p>
 
     <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Pro.exe" download>
-      <button>⬇️ Download for Windows</button>
+      <button>💼 Download Pro Version</button>
+    </a>
+
+    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition_Lite_Version.exe" download>
+      <button>💻 Download Lite Version (Free)</button>
     </a>
 
     <small>
