--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
       color: #444;
     }
 
+    #download a {
+      display: inline-block;
+      margin: 10px;
+    }
+
     #download button {
       background: linear-gradient(135deg, #4db6ac, #81c784);
       color: white;
@@ -161,7 +166,6 @@
       font-size: 1.1rem;
       cursor: pointer;
       transition: background 0.3s;
-      margin: 10px;
     }
 
     #download button:hover {
@@ -287,17 +291,21 @@
     </div>
   </section>
 
-  <!-- ✅ Fixed Download Section -->
+  <!-- ✅ 3-Version Download Section -->
   <section id="download">
     <h2>Download ESL Comment Generators</h2>
-    <p>Choose the version that fits your needs best.</p>
+    <p>Choose the version that fits your teaching needs best.</p>
 
     <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Pro.exe" download>
-      <button>💼 Download Pro Version</button>
+      <button>💼 ESL Comment Generator Pro</button>
+    </a>
+
+    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition.exe" download>
+      <button>🧑‍🏫 ESL Comment Generator Teacher Edition</button>
     </a>
 
     <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition_Lite_Version.exe" download>
-      <button>💻 Download Lite Version (Free)</button>
+      <button>💻 ESL Comment Generator Lite (Free)</button>
     </a>
 
     <small>
