--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       text-align: center;
       padding: 120px 20px;
       text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
-      animation: fadeIn 2s ease-in-out;
     }
 
     .hero h2 {
@@ -113,7 +112,6 @@
       width: 280px;
       text-align: center;
       transition: transform 0.3s ease;
-      animation: fadeInUp 1s ease forwards;
     }
 
     .feature-card:hover {
@@ -131,7 +129,6 @@
       margin-bottom: 10px;
     }
 
-    /* Download section */
     #download {
       background: #ffffff;
       text-align: center;
@@ -151,11 +148,6 @@
       color: #444;
     }
 
-    #download a {
-      display: inline-block;
-      margin: 10px;
-    }
-
     #download button {
       background: linear-gradient(135deg, #4db6ac, #81c784);
       color: white;
@@ -166,6 +158,7 @@
       font-size: 1.1rem;
       cursor: pointer;
       transition: background 0.3s;
+      margin: 10px;
     }
 
     #download button:hover {
@@ -225,16 +218,6 @@
       font-size: 0.9rem;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
     @media (max-width: 768px) {
       .features {
         flex-direction: column;
@@ -291,26 +274,27 @@
     </div>
   </section>
 
-  <!-- ✅ 3-Version Download Section -->
+  <!-- ✅ Download Section -->
   <section id="download">
     <h2>Download ESL Comment Generators</h2>
     <p>Choose the version that fits your teaching needs best.</p>
 
-    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Pro.exe" download>
+    <!-- Pro Version -->
+    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition_Draft_8_Pro.exe" download>
       <button>💼 ESL Comment Generator Pro</button>
     </a>
 
-    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition.exe" download>
+    <!-- Teacher Edition -->
+    <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition_Draft_4_Teacher_Edition.exe" download>
       <button>🧑‍🏫 ESL Comment Generator Teacher Edition</button>
     </a>
 
+    <!-- Lite Version -->
     <a href="https://raw.githubusercontent.com/ScooterA/My-landing-page/main/ESL_Comment_Generator_Teacher_Edition_Lite_Version.exe" download>
       <button>💻 ESL Comment Generator Lite (Free)</button>
     </a>
 
-    <small>
-      ⚠️ Windows only. If you see a SmartScreen warning, click <em>“More Info → Run Anyway”</em>.
-    </small>
+    <small>⚠️ Windows only. If you see a SmartScreen warning, click “More Info → Run Anyway”.</small>
   </section>
 
   <section id="subscribe" class="subscribe">
