--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@
       <button>💻 ESL Comment Generator Lite (Free)</button>
     </a>
 
-    <small>⚠️ Windows only. If you see a SmartScreen warning, click “More Info → Run Anyway”.</small>
+    <small>
+      ⚠️ Windows only. If you see a SmartScreen warning, click “More Info → Run Anyway”.
+    </small>
   </section>
 
   <section id="subscribe" class="subscribe">
