--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <div id="toast" class="toast">Copied to clipboard</div>
 
   <script>
-    const DESTINATION_EMAIL = "your-email@example.com"; // replace with your email
+    const DESTINATION_EMAIL = "teachingtools69@gmail.com";
     const $ = id => document.getElementById(id);
     const toast = $("toast");
 
